Fixed html layout bugs (bad tags, etc)

--- a/TicketMaster.css
+++ b/TicketMaster.css
@@ -18,10 +18,12 @@ HEADER
 **********************************/
 
 #header {
-	position: absolute;
 	width: 100%;
 	height: 110px;
 	background-color: #26393D;
+	-webkit-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
+	box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
 }
 
 #title {
@@ -37,7 +39,6 @@ HEADER
 }
 
 #break-timer {
-	position: absolute;
 	float: left;
 	height: 45px;
 	width: 300px;
@@ -52,13 +53,18 @@ Contents
 **********************************/
 
 #contents {
+	display: inline-block;
 	clear: both;
 	padding-top: 40px;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 100%;
+	width: 90%
 }
 
 #text-area {
 	display: inline-block;
-	margin: 10px 40px 20px 40px;
+	margin: 1% 3%;
 	padding: 25px;
 	float: left;
 	font-family: 'Open Sans';
@@ -69,6 +75,10 @@ Contents
 	-webkit-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
 	-moz-box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
 	box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.75);
+}
+
+textarea {
+	width: 40%;
 }
 
 #contents textarea:focus {
@@ -82,10 +92,10 @@ Contents
 
 #button-area {
 	display: inline-block;
-	margin: 10px 40px 10px 10px;
+	margin: 1% 3%;
 	padding: 20px;
 	width: 40%;
-	height: 400px;
+	height: 586px;
 	background-color: #26393D;
 }
 
@@ -96,12 +106,6 @@ Div properties
 .dropdown {
 	display: inline-block;
 	vertical-align: top;
-}
-
-#break-timer {
-	-webkit-box-shadow: 2px 2px 4px 0 rgba(0,0,0,0.75);
-	-moz-box-shadow: 2px 2px 4px 0 rgba(0,0,0,0.75);
-	box-shadow: 2px 2px 4px 0 rgba(0,0,0,0.75);
 }
 
 /**********************************
